tests/algorithms/x/C/machine_learning/apriori_algorithm.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:48 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t load_data_len;
size_t *load_data_lens;
size_t slice_list_len;
size_t *slice_list_lens;
size_t combinations_lists_len;
size_t *combinations_lists_lens;
size_t prune_len;
size_t *prune_lens;
size_t sort_strings_len;
size_t apriori_len;

size_t append_len;
static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static long long** list_append_intptr(long long **arr, size_t *len, long long *val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static long long*** list_append_intptrptr(long long ***arr, size_t *len, long long **val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long**));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static const char*** list_append_strptr(const char ***arr, size_t *len, const char **val) {
    arr = realloc(arr, (*len + 1) * sizeof(const char**));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t* list_append_szt(size_t *arr, size_t *len, size_t val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static size_t** list_append_szptr(size_t **arr, size_t *len, size_t *val) {
    arr = realloc(arr, (*len + 1) * sizeof(size_t*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct Itemset Itemset;

struct Itemset {
    const char* *items;
    size_t items_len;
    long long support;
};

static long long* list_append_long_long(long long *arr, size_t *len, long long val) {
    arr = realloc(arr, (*len + 1) * sizeof(long long));
    arr[*len] = val;
    (*len)++;
    return arr;
}

static Itemset* list_append_Itemset(Itemset *arr, size_t *len, Itemset val) {
    arr = realloc(arr, (*len + 1) * sizeof(Itemset));
    arr[*len] = val;
    (*len)++;
    return arr;
}

Itemset *frequent_itemsets = NULL;
size_t frequent_itemsets_len = 0;

const char* * * load_data();
long long contains_string(const char* * xs, size_t xs_len, const char* s);
long long is_subset(const char* * candidate, size_t candidate_len, const char* * transaction, size_t transaction_len);
long long lists_equal(const char* * a, size_t a_len, const char* * b, size_t b_len);
long long contains_list(const char* * * itemset, size_t itemset_len, size_t* itemset_lens, size_t itemset_lens_len, const char* * item, size_t item_len);
long long count_list(const char* * * itemset, size_t itemset_len, size_t* itemset_lens, size_t itemset_lens_len, const char* * item, size_t item_len);
const char* * * slice_list(const char* * * xs, size_t xs_len, size_t* xs_lens, size_t xs_lens_len, long long start);
const char* * * * combinations_lists(const char* * * xs, size_t xs_len, size_t* xs_lens, size_t xs_lens_len, long long k);
const char* * * prune(const char* * * itemset, size_t itemset_len, size_t* itemset_lens, size_t itemset_lens_len, const char* * * * candidates, size_t candidates_len, size_t* candidates_lens, size_t candidates_lens_len, long long length);
const char* * sort_strings(const char* * xs, size_t xs_len);
const char* itemset_to_string(const char* * xs, size_t xs_len);
Itemset * apriori(const char* * * data, size_t data_len, size_t* data_lens, size_t data_lens_len, long long min_support);
int main(void);

const char* * * load_data() {
    {
        size_t *__tmp1_lens = malloc(4 * sizeof(size_t));
        __tmp1_lens[0] = 1;
        __tmp1_lens[1] = 2;
        __tmp1_lens[2] = 2;
        __tmp1_lens[3] = 3;
        const char*** __tmp1_data = malloc(4 * sizeof(const char**));
        __tmp1_data[0] = ({const char* *tmp = malloc(1 * sizeof(const char*)); tmp[0] = "milk"; tmp;});
        __tmp1_data[1] = ({const char* *tmp = malloc(2 * sizeof(const char*)); tmp[0] = "milk"; tmp[1] = "butter"; tmp;});
        __tmp1_data[2] = ({const char* *tmp = malloc(2 * sizeof(const char*)); tmp[0] = "milk"; tmp[1] = "bread"; tmp;});
        __tmp1_data[3] = ({const char* *tmp = malloc(3 * sizeof(const char*)); tmp[0] = "milk"; tmp[1] = "bread"; tmp[2] = "chips"; tmp;});
        load_data_lens = __tmp1_lens;
        load_data_len = 4;
        return __tmp1_data;
    }
}

long long contains_string(const char* * xs, size_t xs_len, const char* s) {
    for (size_t __i = 0; __i < xs_len; __i++) {
        const char* v = xs[__i];
        if (strcmp(v, s) == 0) {
            return 1LL;
        }
    }
    return 0LL;
}

long long is_subset(const char* * candidate, size_t candidate_len, const char* * transaction, size_t transaction_len) {
    for (size_t __i = 0; __i < candidate_len; __i++) {
        const char* it = candidate[__i];
        if (!(contains_string(transaction, transaction_len, it))) {
            return 0LL;
        }
    }
    return 1LL;
}

long long lists_equal(const char* * a, size_t a_len, const char* * b, size_t b_len) {
    if (a_len != b_len) {
        return 0LL;
    }
    long long i = 0LL;
    while (i < a_len) {
        if (strcmp(a[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})], b[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})]) != 0) {
            return 0LL;
        }
        i = i + 1LL;
    }
    return 1LL;
}

long long contains_list(const char* * * itemset, size_t itemset_len, size_t* itemset_lens, size_t itemset_lens_len, const char* * item, size_t item_len) {
    for (size_t __i = 0; __i < itemset_len; __i++) {
        const char* *l = itemset[__i];
        size_t l_len = itemset_lens[__i];
        if (lists_equal(l, l_len, item, item_len)) {
            return 1LL;
        }
    }
    return 0LL;
}

long long count_list(const char* * * itemset, size_t itemset_len, size_t* itemset_lens, size_t itemset_lens_len, const char* * item, size_t item_len) {
    long long c = 0LL;
    for (size_t __i = 0; __i < itemset_len; __i++) {
        const char* *l = itemset[__i];
        size_t l_len = itemset_lens[__i];
        if (lists_equal(l, l_len, item, item_len)) {
            c = c + 1LL;
        }
    }
    return c;
}

const char* * * slice_list(const char* * * xs, size_t xs_len, size_t* xs_lens, size_t xs_lens_len, long long start) {
    const char* **res = NULL;
    size_t res_len = 0;
    size_t *res_lens = NULL;
    size_t res_lens_len = 0;
    long long i = start;
    while (i < xs_len) {
        res = list_append_strptr(res, &res_len, xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]);
        res_lens = list_append_szt(res_lens, &res_lens_len, xs_lens[i]);
        i = i + 1LL;
    }
    return slice_list_lens = res_lens, slice_list_len = res_len, res;
}

const char* * * * combinations_lists(const char* * * xs, size_t xs_len, size_t* xs_lens, size_t xs_lens_len, long long k) {
    const char* ***result = NULL;
    size_t result_len = 0;
    size_t *result_lens = NULL;
    size_t result_lens_len = 0;
    size_t **result_lens_lens = NULL;
    size_t result_lens_lens_len = 0;
    if (k == 0LL) {
        result = list_append_strptr(result, &result_len, ({const char*** tmp = malloc(0 * sizeof(const char**)); tmp;}));
        result_lens = list_append_szt(result_lens, &result_lens_len, 0);
        result_lens_lens = list_append_szptr(result_lens_lens, &result_lens_lens_len, NULL);
        return combinations_lists_lens = result_lens, combinations_lists_len = result_len, result;
    }
    long long i = 0LL;
    while (i < xs_len) {
        const char* *head = xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})];
        size_t head_len = xs_lens[i];
        const char* **tail = slice_list(xs, xs_len, xs_lens, xs_len, i + 1LL);
        size_t tail_len = slice_list_len;
        size_t *tail_lens = slice_list_lens;
        size_t tail_lens_len = slice_list_len;
        const char* ***tail_combos = NULL;
        size_t tail_combos_len = 0;
        size_t *tail_combos_lens = NULL;
        size_t tail_combos_lens_len = 0;
        size_t **tail_combos_lens_lens = NULL;
        size_t tail_combos_lens_lens_len = 0;
        for (size_t __i = 0; __i < tail_combos_len; __i++) {
            const char* **combo = tail_combos[__i];
            size_t combo_len = tail_combos_lens[__i];
            size_t *combo_lens = tail_combos_lens_lens[__i];
            const char* **new_combo = NULL;
            size_t new_combo_len = 0;
            size_t *new_combo_lens = NULL;
            size_t new_combo_lens_len = 0;
            new_combo = list_append_strptr(new_combo, &new_combo_len, head);
            new_combo_lens = list_append_szt(new_combo_lens, &new_combo_lens_len, head_len);
            for (size_t __i = 0; __i < combo_len; __i++) {
                const char* *c = combo[__i];
                size_t c_len = combo_lens[__i];
                new_combo = list_append_strptr(new_combo, &new_combo_len, c);
                new_combo_lens = list_append_szt(new_combo_lens, &new_combo_lens_len, c_len);
            }
            result = list_append_strptr(result, &result_len, new_combo);
            result_lens = list_append_szt(result_lens, &result_lens_len, new_combo_len);
            result_lens_lens = list_append_szptr(result_lens_lens, &result_lens_lens_len, NULL);
        }
        i = i + 1LL;
    }
    return combinations_lists_lens = result_lens, combinations_lists_len = result_len, result;
}

const char* * * prune(const char* * * itemset, size_t itemset_len, size_t* itemset_lens, size_t itemset_lens_len, const char* * * * candidates, size_t candidates_len, size_t* candidates_lens, size_t candidates_lens_len, long long length) {
    const char* **pruned = NULL;
    size_t pruned_len = 0;
    size_t *pruned_lens = NULL;
    size_t pruned_lens_len = 0;
    for (size_t __i = 0; __i < candidates_len; __i++) {
        const char* **candidate = candidates[__i];
        size_t candidate_len = candidates_lens[__i];
        size_t *candidate_lens = candidates_lens_lens[__i];
        long long is_subsequence = 1LL;
        for (size_t __i = 0; __i < candidate_len; __i++) {
            const char* *item = candidate[__i];
            size_t item_len = candidate_lens[__i];
            if (!(contains_list(itemset, itemset_len, itemset_lens, itemset_len, item, item_len)) || (count_list(itemset, itemset_len, itemset_lens, itemset_len, item, item_len) < (length - 1LL))) {
                is_subsequence = 0LL;
                break;
            }
        }
        if (is_subsequence) {
            const char* *merged = NULL;
            size_t merged_len = 0;
            for (size_t __i = 0; __i < candidate_len; __i++) {
                const char* *item = candidate[__i];
                size_t item_len = candidate_lens[__i];
                for (size_t __i = 0; __i < item_len; __i++) {
                    const char* s = item[__i];
                    if (!(contains_string(merged, merged_len, s))) {
                        merged = list_append_str(merged, &merged_len, s);
                    }
                }
            }
            pruned = list_append_strptr(pruned, &pruned_len, merged);
            pruned_lens = list_append_szt(pruned_lens, &pruned_lens_len, merged_len);
        }
    }
    return prune_lens = pruned_lens, prune_len = pruned_len, pruned;
}

const char* * sort_strings(const char* * xs, size_t xs_len) {
    const char* *res = NULL;
    size_t res_len = 0;
    for (size_t __i = 0; __i < xs_len; __i++) {
        const char* s = xs[__i];
        res = list_append_str(res, &res_len, s);
    }
    long long i = 0LL;
    while (i < res_len) {
        long long j = i + 1LL;
        while (j < res_len) {
            if (strcmp(res[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})], res[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})]) < 0) {
                const char* tmp = res[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})];
                res[(int)(i)] = res[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? res_len + _mochi_idx : _mochi_idx;})];
                res[(int)(j)] = tmp;
            }
            j = j + 1LL;
        }
        i = i + 1LL;
    }
    return sort_strings_len = res_len, res;
}

const char* itemset_to_string(const char* * xs, size_t xs_len) {
    const char* s = "[";
    long long i = 0LL;
    while (i < xs_len) {
        if (i > 0LL) {
            s = str_concat(s, ", ");
        }
        s = str_concat(str_concat(str_concat(s, "'"), xs[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? xs_len + _mochi_idx : _mochi_idx;})]), "'");
        i = i + 1LL;
    }
    s = str_concat(s, "]");
    return s;
}

Itemset * apriori(const char* * * data, size_t data_len, size_t* data_lens, size_t data_lens_len, long long min_support) {
    const char* **itemset = NULL;
    size_t itemset_len = 0;
    size_t *itemset_lens = NULL;
    size_t itemset_lens_len = 0;
    for (size_t __i = 0; __i < data_len; __i++) {
        const char* *transaction = data[__i];
        size_t transaction_len = data_lens[__i];
        const char* *t = NULL;
        size_t t_len = 0;
        for (size_t __i = 0; __i < transaction_len; __i++) {
            const char* v = transaction[__i];
            t = list_append_str(t, &t_len, v);
        }
        itemset = list_append_strptr(itemset, &itemset_len, t);
        itemset_lens = list_append_szt(itemset_lens, &itemset_lens_len, t_len);
    }
    Itemset *frequent = NULL;
    size_t frequent_len = 0;
    long long length = 1LL;
    while (itemset_len > 0LL) {
        long long *counts = NULL;
        size_t counts_len = 0;
        long long idx = 0LL;
        while (idx < itemset_len) {
            counts = list_append_long_long(counts, &counts_len, 0LL);
            idx = idx + 1LL;
        }
        for (size_t __i = 0; __i < data_len; __i++) {
            const char* *transaction = data[__i];
            size_t transaction_len = data_lens[__i];
            long long j = 0LL;
            while (j < itemset_len) {
                const char* *candidate = itemset[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? itemset_len + _mochi_idx : _mochi_idx;})];
                size_t candidate_len = itemset_lens[j];
                if (is_subset(candidate, candidate_len, transaction, transaction_len)) {
                    counts[(int)(j)] = counts[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? counts_len + _mochi_idx : _mochi_idx;})] + 1LL;
                }
                j = j + 1LL;
            }
        }
        const char* **new_itemset = NULL;
        size_t new_itemset_len = 0;
        size_t *new_itemset_lens = NULL;
        size_t new_itemset_lens_len = 0;
        long long k = 0LL;
        while (k < itemset_len) {
            if (counts[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? counts_len + _mochi_idx : _mochi_idx;})] >= min_support) {
                new_itemset = list_append_strptr(new_itemset, &new_itemset_len, itemset[(int)({long long _mochi_idx = k; _mochi_idx < 0 ? itemset_len + _mochi_idx : _mochi_idx;})]);
                new_itemset_lens = list_append_szt(new_itemset_lens, &new_itemset_lens_len, itemset_lens[k]);
            }
            k = k + 1LL;
        }
        itemset = new_itemset;
        itemset_len = new_itemset_len;
        itemset_lens = new_itemset_lens;
        itemset_lens_len = new_itemset_lens_len;
        long long m = 0LL;
        while (m < itemset_len) {
            const char* *sorted_item = sort_strings(itemset[(int)({long long _mochi_idx = m; _mochi_idx < 0 ? itemset_len + _mochi_idx : _mochi_idx;})], itemset_lens[m]);
            size_t sorted_item_len = sort_strings_len;
            frequent = list_append_Itemset(frequent, &frequent_len, (Itemset){.items = sorted_item, .items_len = sorted_item_len, .support = counts[(int)({long long _mochi_idx = m; _mochi_idx < 0 ? counts_len + _mochi_idx : _mochi_idx;})]});
            m = m + 1LL;
        }
        length = length + 1LL;
        const char* ***combos = NULL;
        size_t combos_len = 0;
        size_t *combos_lens = NULL;
        size_t combos_lens_len = 0;
        size_t **combos_lens_lens = NULL;
        size_t combos_lens_lens_len = 0;
        itemset = prune(itemset, itemset_len, itemset_lens, itemset_len, combos, combos_len, combos_lens, combos_len, length);
        itemset_len = prune_len;
        itemset_lens = prune_lens;
    }
    return apriori_len = frequent_len, frequent;
}

int main(void) {
    {
        long long __start = _now();
        frequent_itemsets = ({const char*** __tmp2 = load_data(); apriori(__tmp2, load_data_len, load_data_lens, load_data_len, 2LL);});
        frequent_itemsets_len = apriori_len;
        for (size_t __i = 0; __i < frequent_itemsets_len; __i++) {
            Itemset fi = frequent_itemsets[__i];
            puts(str_concat(str_concat(itemset_to_string(fi.items, fi.items_len), ": "), str_int(fi.support)));
        }
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
